--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .single #fh5co-aside {
   position: relative;
-  height: 700px;
+  height: 535px;
   width: 100%;
 }
 #fh5co-aside a {
@@ -346,7 +346,7 @@ h1, h2, h3, h4, h5, h6, figure {
     width: 100%;
     position: relative;
     z-index: 999;
-    height: 700px;
+    height: 500px;
   }
 }
 #fh5co-aside .overlay {
@@ -535,6 +535,45 @@ footer {
 }
 .fh5co-post .fh5co-entry > div p:last-child {
   margin-bottom: 0;
+}
+
+.gotohome {
+  position: fixed;
+  bottom: 20px;
+  right: 80px;
+  z-index: 999;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.gotohome.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.gotohome a {
+  width: 50px;
+  height: 50px;
+  display: table;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  text-align: center;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+}
+.gotohome a i {
+  height: 50px;
+  display: table-cell;
+  vertical-align: middle;
+}
+.gotohome a:hover, .gotohome a:active, .gotohome a:focus {
+  text-decoration: none;
+  outline: none;
 }
 
 .gototop {
